# SummerPractice3

./: .gitignore
Calculator/: CMakeLists.txt  Makefile  README.md  calc.c  calc.h  main.c  priorities.c  priorities.h
Calculator/Test/: main.c
Commander/: CMakeLists.txt  Makefile  clipboard.c  clipboard.h  copy.c  gui.c  gui.h  ls.c  ls.h  main.c  newgui.c  newgui.h  rm.c  rm.h  test.c  testrm.c
Copy/: CMakeLists.txt  Makefile  copy.c  copy.h  main.c
